--- a/style.css
+++ b/style.css
@@ -1,24 +1,99 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-color: rgb(248, 245, 245);
+    font-family: monospace, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
 
 h1 {
     text-align: center;
+    font-size: 3rem;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+
+header, footer {
+    background-color: rgb(3, 3, 82);
+    color: white;
+    min-height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main-container {
     width: 1024px;
     margin: 1rem auto;
+    /* display: grid;
+    justify-content: space-around;
+    gap: 3rem; */
 }
 
 section {
     display:flex;
     flex-wrap: wrap;
-    background-color: thistle;
+    background-color: rgb(216, 191, 191);
+    padding: .5rem;
+    
     
 }
 
 section img {
     width: 300px;
+    height: 300px;
+    margin: 1rem auto;
+   
 
 }
+
+p {
+text-align: center;
+font-size: 1.5rem;
+margin: 0 auto;
+padding-bottom: .6em;
+    
+}
+/* section + div will target the div that immediately follows a section */
+section + div {
+    background-color: darkgrey;
+    color: lightgrey;
+    padding: .5rem 1rem;
+    width: max-content;
+    height: max-content;
+    font-size: 1.5rem;
+    margin: 1rem auto;
+    pointer-events: none;
+    /* cursor: not-allowed; */
+  }
+
+  section + div.clicks-allowed {
+    background-color: rosybrown;
+    color: white;
+    cursor: pointer;
+    pointer-events: auto;
+  }
+  
+  section + div.clicks-allowed:hover {
+    background-color: rgb(211, 187, 175);
+  }
+
+  ul {
+    text-align: center;
+    list-style: none;
+    line-height: 1.6;
+ 	column-count: 2;
+	column-gap: 1em;
+    padding: 2rem auto;
+}
+
+footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    
+}
+
