--- a/style.css
+++ b/style.css
@@ -5,24 +5,39 @@
 }
 
 body {
-    background-color: rgb(248, 245, 245);
+    background-color: #E8E9ED;
     font-family: monospace, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
 
 h1 {
     text-align: center;
     font-size: 3rem;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Cabin Sketch', monospace, cursive;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
 
 header, footer {
-    background-color: rgb(3, 3, 82);
+    background-color: #102542;
     color: white;
     min-height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+header {
+    display: flex;
+    justify-content: baseline;
+    flex-wrap: wrap;
+}
+
+header img {
+    max-width: 120px;
+    padding: 1em;
 }
 
 .main-container {
@@ -36,8 +51,9 @@ header, footer {
 section {
     display:flex;
     flex-wrap: wrap;
-    background-color: rgb(216, 191, 191);
+    background-color: #4E878C;
     padding: .5rem;
+    
     
     
 }
@@ -46,8 +62,27 @@ section img {
     width: 300px;
     height: 300px;
     margin: 1rem auto;
+    border: 5px solid transparent;
+    border-radius: 5%;
+    
    
 
+}
+
+section img:hover {
+    border: 5px solid #B15E6C;
+    transform: scale(1.1);
+}
+
+section.no-voting img {
+    border: 5px solid transparent;
+    opacity: 40%;
+
+
+}
+
+section.no-voting img:hover {
+    transform: none;
 }
 
 p {
@@ -55,6 +90,7 @@ text-align: center;
 font-size: 1.5rem;
 margin: 0 auto;
 padding-bottom: .6em;
+color: white;
     
 }
 /* section + div will target the div that immediately follows a section */
@@ -71,14 +107,14 @@ section + div {
   }
 
   section + div.clicks-allowed {
-    background-color: rosybrown;
+    background-color: #B15E6C;
     color: white;
     cursor: pointer;
     pointer-events: auto;
   }
   
   section + div.clicks-allowed:hover {
-    background-color: rgb(211, 187, 175);
+    background-color: #8B687F;
   }
 
   ul {
@@ -99,6 +135,6 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    
+        
 }
 
