--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1 {
     font-family: 'Cabin Sketch', monospace, cursive;
 }
 
+
 a {
     color: white;
     text-decoration: none;
@@ -143,3 +144,50 @@ footer {
         
 }
 
+/* PRACTISING GRID: */
+
+.gallery-main-container {
+    width: 80%;
+    display: grid;
+    gap: 20px;
+    margin: 0 auto;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+         
+ 
+}
+
+.gallery-main-container img {
+    width: 300px;
+    height: 300px;
+    margin: 1rem auto;
+    border: 5px solid #B15E6C;
+
+}
+
+.gallery-main-container h2 {
+    font-size: 2.5rem;
+    text-align: center;
+    /* grid-area: A; */
+    grid-column: span 5;
+}
+/* 
+.gallery img:first-child {
+    grid-area: B;
+}
+
+.gallery img:nth-child(2) {
+    grid-area: C;
+}
+
+.gallery img:nth-child(3) {
+    grid-area: E;
+}
+
+.gallery img:nth-child(4) {
+    grid-area: F;
+}
+
+.gallery img:nth-child(5) {
+    grid-area: G;
+} */
