--- a/style.css
+++ b/style.css
@@ -1,175 +1,173 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: #E8E9ED;
-    font-family: monospace, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+  background-color: #e8e9ed;
+  font-family: monospace, "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+    sans-serif;
 }
 
 h1 {
-    text-align: center;
-    font-size: 3rem;
-    font-family: 'Cabin Sketch', monospace, cursive;
+  text-align: center;
+  font-size: 3rem;
+  font-family: "Cabin Sketch", monospace, cursive;
 }
-
 
 a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
-header, footer {
-    background-color: #102542;
-    color: white;
-    min-height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+header,
+footer {
+  background-color: #102542;
+  color: white;
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 header {
-    display: flex;
-    justify-content: baseline;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: baseline;
+  flex-wrap: wrap;
 }
 
 header img {
-    max-width: 120px;
-    padding: 1em;
+  max-width: 120px;
+  padding: 1em;
 }
 
 .main-container {
-    width: 1024px;
-    margin: 1rem auto;
-    /* display: grid;
+  width: 1024px;
+  margin: 1rem auto;
+  /* display: grid;
     justify-content: space-around;
     gap: 3rem; */
 }
 
 section {
-    display:flex;
-    flex-wrap: wrap;
-    background-color: #4E878C;
-    padding: .5rem;
-    
-    
-    
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #4e878c;
+  padding: 0.5rem;
 }
 
 section img {
-    width: 300px;
-    height: 300px;
-    margin: 1rem auto;
-    border: 5px solid transparent;
-    border-radius: 5%;
-    
-   
-
+  width: 300px;
+  height: 300px;
+  margin: 1rem auto;
+  border: 5px solid transparent;
+  border-radius: 5%;
 }
 
 section img:hover {
-    border: 5px solid #B15E6C;
-    transform: scale(1.1);
+  border: 5px solid #b15e6c;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
-section.no-voting img {
-    border: 5px solid transparent;
-    opacity: 40%;
-
-
-}
+/* section.no-voting img {
+  border: 5px solid transparent;
+  opacity: 40%;;
+  background-color: black
+} */
 
 section.no-voting img:hover {
-    transform: none;
+  -webkit-transform: none;
+  -moz-transform: none;
+  -o-transform: none;
+  transform: none;
+  border: 5px solid transparent;
+  opacity: 40%;;
+  cursor: not-allowed;
 }
 
 p {
-text-align: center;
-font-size: 1.5rem;
-margin: 0 auto;
-padding-bottom: .6em;
-color: white;
-    
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0 auto;
+  padding-bottom: 0.6em;
+  color: white;
 }
 /* section + div will target the div that immediately follows a section */
 section + div {
-    background-color: rgb(100, 100, 100);
-    color: lightgrey;
-    padding: .5rem 1rem;
-    width: max-content;
-    height: max-content;
-    font-size: 1.5rem;
-    margin: 1rem auto;
-    pointer-events: none;
-    /* cursor: not-allowed; */
-  }
+  background-color: rgb(100, 100, 100);
+  color: lightgrey;
+  padding: 0.5rem 1rem;
+  width: max-content;
+  height: max-content;
+  font-size: 1.5rem;
+  margin: 1rem auto;
+  pointer-events: none;
+  /* cursor: not-allowed; */
+}
 
-  section + div.clicks-allowed {
-    background-color: #B15E6C;
-    color: white;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-  
-  section + div.clicks-allowed:hover {
-    background-color: #8B687F;
-  }
+section + div.clicks-allowed {
+  background-color: #b15e6c;
+  color: white;
+  cursor: pointer;
+  pointer-events: auto;
+}
 
-  ul {
-    text-align: center;
-    list-style: none;
-    line-height: 1.6;
- 	column-count: 2;
-	column-gap: 1em;
-    padding: 2rem auto;
+section + div.clicks-allowed:hover {
+  background-color: #8b687f;
+}
+
+ul {
+  text-align: center;
+  list-style: none;
+  line-height: 1.6;
+  column-count: 2;
+  column-gap: 1em;
+  padding: 2rem auto;
 }
 
 canvas {
-    width: 65%;
-    height: 500px;
+  width: 65%;
+  height: 500px;
 }
 
 #pie-chart {
-    width: 50%;
-    height: 250px;
+  width: 50%;
+  height: 250px;
 }
 
 footer {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-        
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 /* PRACTISING GRID: */
 
 .gallery-main-container {
-    width: 80%;
-    display: grid;
-    gap: 20px;
-    margin: 0 auto;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-columns: repeat(5, 1fr);
-         
- 
+  width: 80%;
+  display: grid;
+  gap: 20px;
+  margin: 0 auto;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .gallery-main-container img {
-    width: 300px;
-    height: 300px;
-    margin: 1rem auto;
-    border: 5px solid #B15E6C;
-
+  width: 300px;
+  height: 300px;
+  margin: 1rem auto;
+  border: 5px solid #b15e6c;
 }
 
 .gallery-main-container h2 {
-    font-size: 2.5rem;
-    text-align: center;
-    /* grid-area: A; */
-    grid-column: span 5;
+  font-size: 2.5rem;
+  text-align: center;
+  /* grid-area: A; */
+  grid-column: span 5;
 }
 /* 
 .gallery img:first-child {
